project/vpro-svc.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: vpro-app
spec:
 ports:
 - port: 8080
   protocol: TCP
   targetPort: 8080
 selector:
   run: vpro-app
 type: ClusterIP
