project/vpro-ing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.akadevops.store
    http:
     paths:
     - path: /
       pathType: Prefix
       backend: 
        service: 
          name: vpro-app
          port:
           number: 8080
